--- a/views/office-geneva.ejs
+++ b/views/office-geneva.ejs
@@ -20,12 +20,18 @@
             <div class="office-director">
                 <div class="legend">Director Office</div>
                 <div class="seat unbookable-seat"></div>
-                <div class="hide">This seat cannot be booked (director chair)</div>
+                <div class="hide">
+                    <div class="hide-title">Director chair</div>
+                    <div class="hide-description">This seat cannot be booked</div>
+                </div>
             </div>
             <div class="office-hr">
                 <div class="legend">HR Office</div>
                 <div class="seat unbookable-seat"></div>
-                <div class="hide">This seat cannot be booked (main HR chair)</div>
+                <div class="hide">
+                    <div class="hide-title">HR chair</div>
+                    <div class="hide-description">This seat cannot be booked</div>
+                </div>
                 <div class="seat consultant-seat free"></div>
                 <div class="seat consultant-seat free"></div>
                 <div class="seat consultant-seat free"></div>
@@ -43,15 +49,27 @@
                 <div class="legend">Conference Room</div>
                 <div class="row">
                     <div class="seat neutral-seat unbookable-seat"></div>
-                    <div class="hide">This seat cannot be booked (conference chair 1)</div>
+                    <div class="hide">
+                        <div class="hide-title">Conference chair 1</div>
+                        <div class="hide-description">This seat cannot be booked</div>
+                    </div>
                     <div class="seat neutral-seat unbookable-seat"></div>
-                    <div class="hide">This seat cannot be booked (conference chair 2)</div>
+                    <div class="hide">
+                        <div class="hide-title">Conference chair 2</div>
+                        <div class="hide-description">This seat cannot be booked</div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="seat neutral-seat unbookable-seat"></div>
-                    <div class="hide">This seat cannot be booked (conference chair 3)</div>
+                    <div class="hide">
+                        <div class="hide-title">Conference chair 3</div>
+                        <div class="hide-description">This seat cannot be booked</div>
+                    </div>
                     <div class="seat neutral-seat unbookable-seat"></div>
-                    <div class="hide">This seat cannot be booked (conference chair 4)</div>
+                    <div class="hide">
+                        <div class="hide-title">Conference chair 4</div>
+                        <div class="hide-description">This seat cannot be booked</div>
+                    </div>
                 </div>
             </div>
             <div class="office-managers">
