--- a/public/main.css
+++ b/public/main.css
@@ -38,7 +38,7 @@ body {
 
 .login-container {
     width: var(--wallWidth);
-    height: var(--wallHeight);
+    height: calc(var(--wallHeight) * 0.9);
     background-color: #fff;
     border-radius: 10px;
     display: flex;
@@ -126,7 +126,7 @@ header {
 
 .logo {
     width: 100%;
-    height: 50%;
+    height: 60%;
     margin-top: 2rem;
     margin: auto;
 }
@@ -377,6 +377,7 @@ strong {
 }
 
 .hide-title {
+    margin-top: 5%;
     font-weight: bold;
 }
 
@@ -387,7 +388,7 @@ strong {
 
 .office-hr > .hide {
     top: 20%;
-    left: 5%;
+    left: 2%;
     width: 18%;
     height: 70%;
 }
