--- a/views/logged-user.ejs
+++ b/views/logged-user.ejs
@@ -15,7 +15,8 @@
         </div>
     </header>
     <div class="container">
-        <h2>Welcome <strong><%= username %></strong> to the automated test evaluation website of Itecor </h2>
+        <h2>Welcome <strong id="displayed_name"><%= username %></strong> to the automated test evaluation website of
+            Itecor </h2>
         <p>Your task will be to implement test cases verifying some specifications defined for the application: book a
             seat at Itecor. This is a platform used to manage the workspaces of Itecor Vevey and Geneva.</p>
         <div class="loader-section">
