--- a/views/logged-user.ejs
+++ b/views/logged-user.ejs
@@ -13,6 +13,14 @@
         <div class="logo">
             <a href="/"><img src="images/itecor_logo.png" alt="itecor logo" class="img-logo"></a>
         </div>
+        <div class="logout">
+            <img src="images/shutdown.png" alt="logout symbol" class="img-logout">
+            <a href="/logout">
+                <div class="logout-box" id="logout">
+                    <small>Logout</small>
+                </div>
+            </a>
+        </div>
     </header>
     <div class="container">
         <h2>Welcome <strong id="displayed_name"><%= username %></strong> to the automated test evaluation website of
