--- a/views/office-geneva.ejs
+++ b/views/office-geneva.ejs
@@ -13,6 +13,14 @@
         <div class="logo">
             <a href="/"><img src="/images/itecor_logo.png" alt="itecor logo" class="img-logo"></a>
         </div>
+        <div class="logout">
+            <img src="/images/shutdown.png" alt="logout symbol" class="img-logout">
+            <a href="/logout">
+                <div class="logout-box" id="logout">
+                    <small>Logout</small>
+                </div>
+            </a>
+        </div>
     </header>
     <div class="office-global">
         <div class="office-container">
@@ -97,6 +105,7 @@
         <%- include('includes/footer') %>
     </div>
     <script src="/main-bundled.js"></script>
+    <script src="/users-bundled.js"></script>
 </body>
 
 </html>
