--- a/public/main.css
+++ b/public/main.css
@@ -141,22 +141,71 @@ button {
 }
 
 header {
+    /* border: 2px solid green; */
+    width: var(--containerWidth);
     height: 15%;
-    display: flex;
-    flex-direction: column;
+    position: relative;
 }
 
 .logo {
-    width: 100%;
-    height: 60%;
-    margin-top: 2rem;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 50%;
+    height: 50%;
     margin: auto;
+    transform: translateX(-50%) translateY(-50%);
 }
 
 .img-logo {
     max-width: 100%;
     max-height: 100%;
     display: block;
+    margin: auto;
+}
+
+.logout {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 15%;
+    height: 50%;
+    transform: translateY(-50%);
+}
+
+.img-logout {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    max-width: 50%;
+    max-height: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.logout-box {
+    border: 2px solid black;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 100%;
+    padding: 5px;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: none;
+}
+
+.logout-box > small {
+    color: black;
+    margin: auto;
+}
+
+.logout-box:hover {
+    background-color: lightgrey;
+}
+
+.logout-box > small:hover {
+    color: var(--itecor-official-color);
     margin: auto;
 }
 
