compliance with technical test upgrade

--- a/views/office-vevey.ejs
+++ b/views/office-vevey.ejs
@@ -13,10 +13,10 @@
         <div class="logo">
             <a href="/"><img src="/images/itecor_logo.png" alt="itecor logo" class="img-logo"></a>
         </div>
-        <div class="logout">
+        <div class="logout" id="logout-symbol">
             <img src="/images/shutdown.png" alt="logout symbol" class="img-logout">
             <a href="/logout">
-                <div class="logout-box" id="logout">
+                <div class="logout-box" id="logout" style="display: none;">
                     <small>Logout</small>
                 </div>
             </a>
@@ -29,7 +29,7 @@
                 <img src="/images/work_in_progress.png" alt="Work in progress" class="img-wip">
             </div>
             <p class="office-summary">The Vevey office is still in construction (coming soon). Please have a look a the
-                <a href="/office/geneva/" class="links">Geneva
+                <a href="/office/geneva/" class="links" id="link_geneva">Geneva
                     office!</a>
             </p>
         </div>
