--- a/public/main.css
+++ b/public/main.css
@@ -192,7 +192,6 @@ header {
     top: 100%;
     left: 50%;
     transform: translateX(-50%);
-    display: none;
 }
 
 .logout-box > small {
@@ -557,7 +556,7 @@ strong {
     margin: auto;
 }
 
-.hide {
+.bubble {
     display: none;
     position: absolute;
     background-image: radial-gradient(circle farthest-side, white, lightgrey);
@@ -567,31 +566,31 @@ strong {
     padding: 5px;
 }
 
-.hide-title {
+.bubble-title {
     margin-top: 5%;
     font-weight: bold;
 }
 
-.hide-description {
+.bubble-description {
     margin-top: 5%;
     text-align: left;
 }
 
-.office-hr > .hide {
+.office-hr > .bubble {
     top: 20%;
     left: 2%;
     width: 18%;
     height: 70%;
 }
 
-.office-director > .hide {
+.office-director > .bubble {
     top: 20%;
     left: 20%;
     width: 65%;
     height: 70%;
 }
 
-.row > .hide {
+.row > .bubble {
     top: 20%;
     left: 20%;
     width: 65%;
@@ -640,4 +639,8 @@ strong {
 
 .links {
     color: var(--itecor-official-color);
+}
+
+#link_geneva {
+    text-decoration: none;
 }
