--- a/views/logged-user.ejs
+++ b/views/logged-user.ejs
@@ -13,10 +13,10 @@
         <div class="logo">
             <a href="/"><img src="images/itecor_logo.png" alt="itecor logo" class="img-logo"></a>
         </div>
-        <div class="logout">
+        <div class="logout" id="logout-symbol">
             <img src="images/shutdown.png" alt="logout symbol" class="img-logout">
             <a href="/logout">
-                <div class="logout-box" id="logout">
+                <div class="logout-box" id="logout" style="display: none;">
                     <small>Logout</small>
                 </div>
             </a>
