--- a/views/office-geneva.ejs
+++ b/views/office-geneva.ejs
@@ -13,10 +13,10 @@
         <div class="logo">
             <a href="/"><img src="/images/itecor_logo.png" alt="itecor logo" class="img-logo"></a>
         </div>
-        <div class="logout">
+        <div class="logout" id="logout-symbol">
             <img src="/images/shutdown.png" alt="logout symbol" class="img-logout">
             <a href="/logout">
-                <div class="logout-box" id="logout">
+                <div class="logout-box" id="logout" style="display: none;">
                     <small>Logout</small>
                 </div>
             </a>
@@ -29,17 +29,17 @@
                 <div class="office-director">
                     <div class="legend">Director Office</div>
                     <div class="seat unbookable-seat"></div>
-                    <div class="hide" id="popup_director">
-                        <div class="hide-title">Director chair</div>
-                        <div class="hide-description">This seat cannot be booked</div>
+                    <div class="bubble" id="popup_director">
+                        <div class="bubble-title">Director chair</div>
+                        <div class="bubble-description">This seat cannot be booked</div>
                     </div>
                 </div>
                 <div class="office-hr">
                     <div class="legend">HR Office</div>
                     <div class="seat unbookable-seat"></div>
-                    <div class="hide" id="popup_hr">
-                        <div class="hide-title">HR chair</div>
-                        <div class="hide-description">This seat cannot be booked</div>
+                    <div class="bubble" id="popup_hr">
+                        <div class="bubble-title">HR chair</div>
+                        <div class="bubble-description">This seat cannot be booked</div>
                     </div>
                     <div class="seat consultant-seat free"></div>
                     <div class="seat consultant-seat free"></div>
@@ -58,26 +58,26 @@
                     <div class="legend">Conference Room</div>
                     <div class="row">
                         <div class="seat neutral-seat unbookable-seat"></div>
-                        <div class="hide" id="popup_conf1">
-                            <div class="hide-title">Conference chair 1</div>
-                            <div class="hide-description">This seat cannot be booked</div>
+                        <div class="bubble" id="popup_conf1">
+                            <div class="bubble-title">Conference chair 1</div>
+                            <div class="bubble-description">This seat cannot be booked</div>
                         </div>
                         <div class="seat neutral-seat unbookable-seat"></div>
-                        <div class="hide" id="popup_conf2">
-                            <div class="hide-title">Conference chair 2</div>
-                            <div class="hide-description">This seat cannot be booked</div>
+                        <div class="bubble" id="popup_conf2">
+                            <div class="bubble-title">Conference chair 2</div>
+                            <div class="bubble-description">This seat cannot be booked</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="seat neutral-seat unbookable-seat"></div>
-                        <div class="hide" id="popup_conf3">
-                            <div class="hide-title">Conference chair 3</div>
-                            <div class="hide-description">This seat cannot be booked</div>
+                        <div class="bubble" id="popup_conf3">
+                            <div class="bubble-title">Conference chair 3</div>
+                            <div class="bubble-description">This seat cannot be booked</div>
                         </div>
                         <div class="seat neutral-seat unbookable-seat"></div>
-                        <div class="hide" id="popup_conf4">
-                            <div class="hide-title">Conference chair 4</div>
-                            <div class="hide-description">This seat cannot be booked</div>
+                        <div class="bubble" id="popup_conf4">
+                            <div class="bubble-title">Conference chair 4</div>
+                            <div class="bubble-description">This seat cannot be booked</div>
                         </div>
                     </div>
                 </div>
